--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	</head>
 	<body>
 		<div id="app">
-			<img src="img/heihei.jpg" /> 
-			https://github.com/yaodaozhang/gouxian/blob/main/heihei.jpg
+			<img src="https://github.com/yaodaozhang/gouxian/blob/main/heihei.jpg" /> 
+			
 			<h1>{{name}}</h1>
 			<hr/>
 			
